assets/05_k8s-eviction-extender.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-eviction-extender
  namespace: kube-eviction-extender
  labels:
    app: k8s-eviction-extender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-eviction-extender
  template:
    metadata:
      labels:
        app: k8s-eviction-extender
    spec:
      serviceAccount: k8s-eviction-extender
      serviceAccountName: k8s-eviction-extender
      containers:
        - name: k8s-eviction-extender
          image: quay.io/mgugino.redhat/k8s-eviction-extender:latest
          imagePullPolicy: Always
          command:
          - "/k8s-eviction-extender"
          args:
            - --webhook-cert=/etc/secret-volume/tls.crt
            - --webhook-key=/etc/secret-volume/tls.key
            - -v=4
            - 2>&1
          volumeMounts:
              # name must match the volume name below
              - name: secret-volume
                mountPath: /etc/secret-volume
                readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: k8s-eviction-extender
