assets/04_k8s-eviction-extender.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8s-eviction-extender
  namespace: kube-eviction-extender
  annotations:
    # This will ensure a tls key pair will be created for our pod.
    service.beta.openshift.io/serving-cert-secret-name: k8s-eviction-extender
spec:
  selector:
    app: k8s-eviction-extender
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
