assets/vwh-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kube-vwh-service
  annotations:
    # This will ensure a tls key pair will be created for our pod.
    service.alpha.openshift.io/serving-cert-secret-name: kube-vwh
spec:
  selector:
    app: kube-vwh
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
