assets/route-test.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    component: support
    logging-infra: support
    provider: openshift
  name: logging-kibana
spec:
  host: customhost.example.openshift.com
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      ...
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      ...
      -----END CERTIFICATE-----
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      ...
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN PRIVATE KEY-----
      ...
      -----END PRIVATE KEY-----
    termination: reencrypt
  to:
    kind: Service
    name: logging-kibana
    weight: 100
  wildcardPolicy: None
