assets/cron-vwh-local.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: deny-batch-create
webhooks:
- name: deny.batch.create
  rules:
  - apiGroups:
    - "batch"
    apiVersions:
    - v1beta1
    operations:
    - "CREATE"
    resources:
    - cronjobs
  # Default failurePolicy is not fail.
  failurePolicy: Fail
  clientConfig:
    url: "https://testing.michaelgugino.com/deny-batch-create"
    caBundle: # base64 encoded CA of the cert used in URL.
