assets/cron-vwh-svc.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: deny-cron-create
webhooks:
- name: deny.cron.create
  rules:
  - apiGroups:
    - "batch"
    apiVersions:
    - v1beta1
    operations:
    - "CREATE"
    resources:
    - cronjobs
  # Default failurePolicy is not fail.
  failurePolicy: Fail
  clientConfig:
    service:
      namespace: default
      name: kube-vwh-service
      path: /deny-cronjob-createx
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDakNDQWZLZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREEyTVRRd01nWURWUVFEREN0dmNHVnUKYzJocFpuUXRjMlZ5ZG1salpTMXpaWEoyYVc1bkxYTnBaMjVsY2tBeE5UVXdOakF6Tmprek1CNFhEVEU1TURJeApPVEU1TVRRMU1sb1hEVEU1TURNd01URTVNVFExTTFvd05qRTBNRElHQTFVRUF3d3JiM0JsYm5Ob2FXWjBMWE5sCmNuWnBZMlV0YzJWeWRtbHVaeTF6YVdkdVpYSkFNVFUxTURZd016WTVNekNDQVNJd0RRWUpLb1pJaHZjTkFRRUIKQlFBRGdnRVBBRENDQVFvQ2dnRUJBSnl0dTlIM2dpakJCYjBwTWtwMkJHRnd2amRyNDBRa3dma2FxVXpubVNqVwpoeWpJWjV5SEl3ei [...]
