assets/pod-vwh-local.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: deny-pods-create
webhooks:
- name: deny.pods.create
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  # Default failurePolicy is not fail.
  failurePolicy: Fail
  clientConfig:
    # Set this to a url you can actually resolve from your cluster.
    url: "https://testing.michaelgugino.com/always-deny"
    # base64 encoded contents of a .pem cert file.
    caBundle: # base64 encoded CA of the cert used in URL.
